[gd_scene load_steps=3 format=2]

[ext_resource path="res://drop.bmp" type="Texture" id=1]
[ext_resource path="res://ArtHelper.gd" type="Script" id=2]

[node name="ArtHelper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingForFiles" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="WaitingForFiles"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Drag files to begin"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="WaitingForFiles"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="GetFields" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GetFields"]
margin_left = 32.0
margin_top = 50.0
margin_right = 32.0
margin_bottom = 650.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Properties" type="Label" parent="GetFields"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 30.0

[node name="VBoxContainer" type="VBoxContainer" parent="GetFields"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FieldName" type="LineEdit" parent="GetFields/VBoxContainer"]
margin_right = 512.0
margin_bottom = 24.0
placeholder_text = "Name"

[node name="FieldDate" type="LineEdit" parent="GetFields/VBoxContainer"]
margin_top = 28.0
margin_right = 512.0
margin_bottom = 52.0
placeholder_text = "Date"

[node name="FieldDescription" type="LineEdit" parent="GetFields/VBoxContainer"]
margin_top = 56.0
margin_right = 512.0
margin_bottom = 80.0
placeholder_text = "Description"

[node name="FieldTags" type="LineEdit" parent="GetFields/VBoxContainer"]
margin_top = 84.0
margin_right = 512.0
margin_bottom = 108.0
placeholder_text = "Tags (comma seperated)"

[node name="Submit" type="Button" parent="GetFields/VBoxContainer"]
margin_top = 112.0
margin_right = 512.0
margin_bottom = 132.0
text = "Final,ize"

[connection signal="pressed" from="GetFields/VBoxContainer/Submit" to="." method="process_image"]
